--- a/_config.yml
+++ b/_config.yml
@@ -55,5 +55,5 @@ sass:
 # Specify the author for blog posts
 author:
   name: Songzi Vong
-  url: https://ldhun.githun.io/
+  url: https://ldhun.github.io/
   email: vszhub@gmail.com
