--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ social:
   links:
     - https://twitter.com/vszhub
     - https://github.com/vszhub
-google_site_verification: xxxxx
+google_site_verification: google8f147c014eae0615.html
 lang: en
 
 sass:
